# SimpleIM

./: AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
SimpleIMClient/: CMakeLists.txt  ClientInterface.cpp  ClientInterface.h  SimpleIMClient.cpp  SimpleIMClient.h  main.cpp
SimpleIMGuiClient/: CMakeLists.txt  EventHandler.cpp  EventHandler.h  LoginDialog.cpp  LoginDialog.h  main.cpp
SimpleIMLib/: CMakeLists.txt  Message.cpp  Message.h  MessageHeader.h  MessageQueue.cpp  MessageQueue.h  MessageType.h  SimpleIMClient.cpp  SimpleIMClient.h
SimpleIMServer/: CMakeLists.txt  Client.cpp  Client.h  ClientHandler.cpp  ClientHandler.h  ClientManager.cpp  ClientManager.h  IncomingConnHandler.cpp  IncomingConnHandler.h  ServerClient.cpp  ServerClient.h  SimpleIMServer.cpp
Tests/: CMakeLists.txt  TestServerClient.cpp
